--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 target/
+.settings/
+.classpath
+.project
+*.log
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -7,3 +11,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+# maven wrapper 
+.mvn/wrapper/*.jar
+mvnw
+mvnw.bat
+/build/
