--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>net.aequologica.neo</groupId>
             <artifactId>geppaequo-tags</artifactId>
+            <version>0.4.5-SNAPSHOT</version>
             <classifier>${java-version-classifier}</classifier>
         </dependency>
 
