--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,18 @@
             <scope>test</scope>
         </dependency>
         <!-- END test -->
+        
+        <!-- BEGIN persistence -->
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+        </dependency>
+        <!-- END persistence -->
+        
     </dependencies>
 
     <profiles>
