more config, more metadata

--- a/src/main/resources/META-INF/resources/wizardry/.imageserver/application.conf
+++ b/src/main/resources/META-INF/resources/wizardry/.imageserver/application.conf
@@ -1,3 +1,5 @@
 imageserver {
-    image = "/geppaequo-api/stnemucod/v1/document/images/Bosch_-_Haywain_Triptych.jpg"
+    title       = "Blue Screen of Death"
+    wikipedia   = "https://en.wikipedia.org/wiki/Blue_Screen_of_Death"
+    image       = "/modules/image-server/images/bsod.jpg"
 }
