--- a/src/main/webapp/wizardry/.imageserver/application.conf
+++ b/src/main/webapp/wizardry/.imageserver/application.conf
@@ -1,5 +1,5 @@
 imageserver {
     title       = "Blue Screen of Death"
     wikipedia   = "https://en.wikipedia.org/wiki/Blue_Screen_of_Death"
-    image       = "/modules/image-server/images/bsod.jpg"
+    image       = "classpath://bsod.jpg"
 }
