randomizer type (basic, uniform) is now configurable

--- a/src/main/resources/META-INF/resources/wizardry/.imageserver/application.conf
+++ b/src/main/resources/META-INF/resources/wizardry/.imageserver/application.conf
@@ -2,4 +2,5 @@ imageserver {
     title       = "Blue Screen of Death"
     wikipedia   = "https://en.wikipedia.org/wiki/Blue_Screen_of_Death"
     image       = "classpath://bsod.jpg"
+    randomizer  = "uniform"
 }
