added link to earthly delights garden

--- a/src/main/resources/META-INF/resources/wizardry/.imageserver/application.conf
+++ b/src/main/resources/META-INF/resources/wizardry/.imageserver/application.conf
@@ -1,5 +1,6 @@
 imageserver {
     title       = "Blue Screen of Death"
+    app         = "http://earthlydelights.garden/localhost.html" 
     wikipedia   = "https://en.wikipedia.org/wiki/Blue_Screen_of_Death"
     image       = "classpath://bsod.jpg"
     randomizer  = "uniform"
