updated shak conf

--- a/.mvn/shakuntala.conf
+++ b/.mvn/shakuntala.conf
@@ -53,18 +53,12 @@ context  =
 # port    = 8080
 # context = buildhub-web
 
-path = hub
+# path = hub
+# apiPath = api/buildhub/v1/builds
 
 # websocket buffer size
 # default is 8192
 # bufferSize=8192
-
-#
-# if writer 'websocket' is active, and if browserOpen is true, 
-# shakuntala will open a browser tab/page at each invocation
-#
-# browserOpen = false
-# browserPath = api/builds
 
 ################
 # if writer 'dag' is active
