--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.glassfish.jersey.ext</groupId>
             <artifactId>jersey-mvc-jsp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+        </dependency>
 
         <!-- get jackson -->
         <dependency>
