--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <!-- BEGIN persistence -->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
+            <artifactId>org.eclipse.persistence.jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
