--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <!-- el-api -->
         <dependency>
             <groupId>org.glassfish</groupId>
-            <artifactId>javax.el</artifactId>
+            <artifactId>jakarta.el</artifactId>
         </dependency>
         <!-- jsp -->
         <dependency>
